--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+body{
+  background-color: black;
   color: white;
+  margin-inline: 2.5rem;
+}
+nav{
+  position: sticky;
+  top:0;
+}
+.navbar {
+  /* background: #333; */
+  color: white;
+  padding: 0.5rem 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+ 
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar-logo a {
+  color: white;
+  text-decoration: none;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+.navbar-logo a img{
+  margin-top: 10px;
+  width: 100px;
+  height: 50px;
+}
+
+.navbar-menu {
+  list-style: none;
+  display: flex;
+  margin-left:30rem;
+  padding: 0;
+  text-transform: uppercase;
+}
+
+.navbar-item {
+  margin-left: 3.5rem;
+}
+
+.navbar-item a {
+  color: white;
+  text-decoration: none;
+  font-size:13px;
+}
+.navbar-icon img{
+  height: 50px;
+  width: 70px;
+}
+.productLinks{
+  position: absolute;
+  left:25rem;
+  top:15rem;
+}
+.productLinks img{
+  
+   height: 300px;
+   width:500px;
 }
